Refactor using openRewrite Spring Boot 3.2 Upgrade script
Signed-off-by: Donald F. Coffin <dcoffin@greenbuttonalliance.org>