@@ -84,7 +84,7 @@ public class CustomerAgreementRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -95,7 +95,7 @@ public class CustomerAgreementRepositoryTest {
 
 		Assertions.assertTrue(
 			customerAgreement.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, customerAgreement.map(CustomerAgreement::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, customerAgreement.map(CustomerAgreement::getUuid).orElse(null))
 		);
 	}
 
@@ -107,7 +107,7 @@ public class CustomerAgreementRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
