@@ -77,7 +77,7 @@ public class CustomerRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -88,7 +88,7 @@ public class CustomerRepositoryTest {
 
 		Assertions.assertTrue(
 			customer.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, customer.map(Customer::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, customer.map(Customer::getUuid).orElse(null))
 		);
 	}
 
@@ -100,7 +100,7 @@ public class CustomerRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
