@@ -81,7 +81,7 @@ public class ServiceLocationRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -92,7 +92,7 @@ public class ServiceLocationRepositoryTest {
 
 		Assertions.assertTrue(
 			serviceLocation.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, serviceLocation.map(ServiceLocation::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, serviceLocation.map(ServiceLocation::getUuid).orElse(null))
 		);
 	}
 
@@ -104,7 +104,7 @@ public class ServiceLocationRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
