@@ -75,7 +75,7 @@ public class ServiceSupplierRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -86,7 +86,7 @@ public class ServiceSupplierRepositoryTest {
 
 		Assertions.assertTrue(
 			serviceSupplier.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, serviceSupplier.map(ServiceSupplier::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, serviceSupplier.map(ServiceSupplier::getUuid).orElse(null))
 		);
 	}
 
@@ -98,7 +98,7 @@ public class ServiceSupplierRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
