@@ -73,7 +73,7 @@ public class ApplicationInformationRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -84,7 +84,7 @@ public class ApplicationInformationRepositoryTest {
 
 		Assertions.assertTrue(
 			applicationInformation.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, applicationInformation.map(ApplicationInformation::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, applicationInformation.map(ApplicationInformation::getUuid).orElse(null))
 		);
 	}
 
@@ -96,7 +96,7 @@ public class ApplicationInformationRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
