@@ -105,7 +105,7 @@ public class AuthorizationRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -116,7 +116,7 @@ public class AuthorizationRepositoryTest {
 
 		Assertions.assertTrue(
 			authorization.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, authorization.map(Authorization::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, authorization.map(Authorization::getUuid).orElse(null))
 		);
 	}
 
@@ -128,7 +128,7 @@ public class AuthorizationRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
