@@ -86,7 +86,7 @@ public class ElectricPowerQualitySummaryRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -97,7 +97,7 @@ public class ElectricPowerQualitySummaryRepositoryTest {
 
 		Assertions.assertTrue(
 			electricPowerQualitySummary.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, electricPowerQualitySummary.map(ElectricPowerQualitySummary::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, electricPowerQualitySummary.map(ElectricPowerQualitySummary::getUuid).orElse(null))
 		);
 	}
 
@@ -109,7 +109,7 @@ public class ElectricPowerQualitySummaryRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
