@@ -88,7 +88,7 @@ public class IntervalBlockRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -99,7 +99,7 @@ public class IntervalBlockRepositoryTest {
 
 		Assertions.assertTrue(
 			intervalBlock.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, intervalBlock.map(IntervalBlock::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, intervalBlock.map(IntervalBlock::getUuid).orElse(null))
 		);
 	}
 
@@ -111,7 +111,7 @@ public class IntervalBlockRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
