@@ -79,7 +79,7 @@ public class TimeConfigurationRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -90,7 +90,7 @@ public class TimeConfigurationRepositoryTest {
 
 		Assertions.assertTrue(
 			timeConfiguration.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, timeConfiguration.map(TimeConfiguration::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, timeConfiguration.map(TimeConfiguration::getUuid).orElse(null))
 		);
 	}
 
@@ -102,7 +102,7 @@ public class TimeConfigurationRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
