@@ -96,7 +96,7 @@ public class UsageSummaryRepositoryTest {
 		Assertions.assertEquals(
 			presentUuid,
 			foundUuid,
-			() -> String.format("findById with %s returns entity with ID %s", presentUuid, foundUuid)
+			() -> "findById with %s returns entity with ID %s".formatted(presentUuid, foundUuid)
 		);
 	}
 
@@ -107,7 +107,7 @@ public class UsageSummaryRepositoryTest {
 
 		Assertions.assertTrue(
 			usageSummary.isEmpty(),
-			() -> String.format("findById with %s returns entity with ID %s", notPresentUuid, usageSummary.map(UsageSummary::getUuid).orElse(null))
+			() -> "findById with %s returns entity with ID %s".formatted(notPresentUuid, usageSummary.map(UsageSummary::getUuid).orElse(null))
 		);
 	}
 
@@ -119,7 +119,7 @@ public class UsageSummaryRepositoryTest {
 		Assertions.assertEquals(
 			findByAllSize,
 			testDataSize,
-			() -> String.format("findByAll size of %s does not match test data size of %s", findByAllSize, testDataSize)
+			() -> "findByAll size of %s does not match test data size of %s".formatted(findByAllSize, testDataSize)
 		);
 	}
 
